# basic-CMake-project-template

./: .clangd  CMakeLists.txt  README.md  build.sh
include/: header.hpp
src/: main.cpp
